<resources>
    <string name="app_name">Colors</string>
    <string name="color_title">Create an RGB Color</string>
    <string name="color_desc">Add two hexadecimal characters between 0–9, A-F or a-f without the \'#\' for each channel</string>
    <string name="red_channel_text">Red Channel</string>
    <string name="green_channel_text">Green Channel</string>
    <string name="blue_channel_text">Blue Channel</string>
    <string name="button_color_text">CREATE RGB COLOR</string>
    <string name="color_result_text">Created color display panel</string>
</resources>